# object-annotator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/object_annotator/: __init__.py  __main__.py  app.py
src/object_annotator/libs/: __init__.py  canvas.py  colorDialog.py  combobox.py  constants.py  create_ml_io.py  default_label_combobox.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  lightWidget.py  pascal_voc_io.py  resources.py  settings.py  shape.py  stringBundle.py  toolBar.py  ustr.py  utils.py  zoomWidget.py
src/object_annotator/libs/assistant/: __init__.py  dataset.py  device.py  predictor.py  trainer.py
src/object_annotator/resources/icons/: app.icns
src/object_annotator/resources/strings/: strings-ja-JP.properties  strings-zh-CN.properties  strings-zh-TW.properties  strings.properties
tests/: test_assistant_dataset.py  test_assistant_mainwindow_flow.py  test_assistant_predictor.py  test_assistant_trainer.py  test_io.py  test_qt.py  test_settings.py  test_stringBundle.py  test_utils.py
