[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "object-annotator"
version = "1.0.0"
description = "Desktop image annotation tool for object detection datasets"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Object Annotator contributors" }
]
keywords = ["object-detection", "annotation", "labeling", "qt", "computer-vision"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Environment :: X11 Applications :: Qt",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "PyQt5>=5.15.10,<5.16",
  "lxml>=4.9.1,<6",
]

[project.optional-dependencies]
assistant = [
  "ultralytics>=8",
]
dev = [
  "build>=1",
  "twine>=5",
]

[project.scripts]
object-annotator = "object_annotator.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["object_annotator*"]

[tool.setuptools.package-data]
object_annotator = [
  "resources.qrc",
  "resources/icons/*",
  "resources/strings/*",
]
